--- a/ZKProject/src/main/webapp/contactlist.css
+++ b/ZKProject/src/main/webapp/contactlist.css
@@ -2,13 +2,10 @@
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-	max-width: 250px; /* Adjust this value as needed */
-	display: inline-block; /* Ensure the element respects the max-width */
+	max-width: 250px; 
+	display: inline-block;
 }
 
-/* .z-label {
-	font-size: medium;
-} */
 .z-column-content {
     font-weight: bold;
     padding: 4px 5px 3px;
