--- a/ZKProject/src/main/webapp/contact.zul
+++ b/ZKProject/src/main/webapp/contact.zul
@@ -1,10 +1,13 @@
 <?page title="New Page Title" contentType="text/html;charset=UTF-8"?>
+<?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
 <zk>
 	<window id="contactWindow" apply="controller.ContactController">
-		<style src="contact.css" />
-		<div sclass="row contact-page" >
+		<style src="contact.css"/>
+		<div sclass="row contact-page">
+		
 			<label sclass="admin-label">Admin:</label>
 			<div sclass="row admin-section">
+
 				<div sclass="row box">
 					<hlayout>
 						<label value="ID:" sclass="label"
@@ -15,6 +18,7 @@
 							visible="false" sclass="label" />
 					</hlayout>
 				</div>
+
 				<div sclass="row box">
 					<hlayout>
 						<label value="Date Added:" sclass="label"
@@ -24,6 +28,7 @@
 							style="padding-left: 52px;font-size: 14px;font-weight: 700;" />
 					</hlayout>
 				</div>
+
 				<div sclass="row box">
 					<hlayout>
 						<label value="Added By:" sclass="label"
@@ -33,7 +38,6 @@
 							style="padding-left: 67px;font-size: 14px;font-weight: 700;" />
 					</hlayout>
 				</div>
-
 
 				<div sclass="row box">
 					<hlayout>
@@ -54,41 +58,55 @@
 					<hlayout>
 						<label value="*Company Name:" sclass="label" />
 						<textbox id="companyNameTextbox" value=""
-							style="margin-left:18px;   padding: 0 32px 0 5px;"
+							maxlength="50" style="margin-left:18px;   padding: 0 32px 0 5px;"
 							onBlur="@command('companyNameValid')" />
 						<label id="companyNameError" style="color:red;"
 							visible="false" />
 					</hlayout>
 				</div>
+
 				<div sclass="row box">
 					<hlayout>
 						<label value="*Short Name:" sclass="label" />
-						<textbox id="shortNameTextbox" value="" maxlength="3"
-							style="margin-left:48px; padding: 0 32px 0 5px;" />
-						<label id="shortNameError"
-							 style="color:red;"
+						<textbox id="shortNameTextbox" value="" xmlns:w="client"
+                            maxlength="3" instant="true"
+    style="margin-left:48px; padding: 0 32px 0 5px;">
+    <attribute w:name="onKeyDown"><![CDATA[
+        var key = event.keyCode || event.which;
+        var char = String.fromCharCode(key);
+        // Allow control keys (backspace, delete, arrow keys)
+        if (key == 8 || key == 46 || key >= 37 && key <= 40) {
+            return true;
+        }
+        // Allow only uppercase letters
+        if (!/[A-Z]/.test(char)) {
+            event.stop();
+            return false;
+        }       
+        return true;
+    ]]></attribute>
+</textbox>
+																						
+						<label id="shortNameError" style="color:red;"
 							visible="false" />
 
 					</hlayout>
 				</div>
 
-
-
 			</div>
 
-
 			<label sclass="categories">*Categories:</label>
-			<!-- Right side: Category grid -->
 			<div sclass="row categorie-section">
-				<grid id="categoriesGrid" width="410px"
-					style="border:none;" sclass="grid-section">
+
+				<grid id="categoriesGrid" style="border:none;"
+					sclass="grid-section">
 					<template name="model">
-						<row style="border:none;">
-							<!-- Removed the label element for ID -->
-							<label value="${each.name}"
-								style="font-size: 16px;color: black;" sclass="cate-text" />
+						<row style="border:none;"
+							sclass="col-lg-4 col-md-4 col-sm-4 col-1">
 							<checkbox value="${each}" style="margin:0;"
 								checked="${each.selected}" />
+							<label value="${each.name}"
+								style="font-size: 16px;color: black;" sclass="cate-text" />
 						</row>
 					</template>
 				</grid>
@@ -97,24 +115,22 @@
 					visible="false" />
 			</div>
 
-
-			<!-- <label sclass="Office-label">Office:</label>
-				<div sclass="btn">
-				<button label="+" id="addOffice" sclass="newOffice" />
-				</div> -->
-
 			<div sclass="row">
+
 				<div sclass="col-lg-6 col-md-6">
 					<label sclass="Office-label">*Office:</label>
 				</div>
-				<div sclass="col-lg-6 col-md-6" style="padding-left: 650px;">
-					<button label="New office"  id="addOffice" tooltiptext="New office"/>
-				
+				<div sclass="col-lg-6 col-md-6"
+					style="padding-left: 650px;">
+					<button label="New office" id="addOffice"
+						tooltiptext="New office" />
 				</div>
+
 			</div>
 
 			<div sclass="row office-section">
 				<div sclass="Office">
+
 					<grid id="officeGrid">
 						<columns>
 							<column label="ID" />
@@ -128,32 +144,53 @@
 								<label value="${each.id}"
 									tooltiptext="${each.id}" />
 								<label value="${each.officeName}"
-									tooltiptext="${each.officeName}" />
+									tooltiptext="${each.officeName}" sclass="truncated" />
 								<label value="${each.address1}"
-									tooltiptext="${each.address1}" />
+									tooltiptext="${each.address1}" sclass="truncated"/>
 								<label value="${each.status}"
 									tooltiptext="${each.status}" />
 								<hbox>
 									<button label="Edit"
-										forward="onUpdate(${each})" tooltiptext="Edit"/>
+										forward="onUpdate(${each})" tooltiptext="Edit" />
 									<button label="Delete"
-										forward="onDelete(${each})" tooltiptext="Delete"/>
+										forward="onDelete(${each})" tooltiptext="Delete" />
 								</hbox>
 							</row>
 						</template>
 					</grid>
+
+					<div style="position:relative;">
+
+						<paging id="paging1" />
+						<paging id="paging2" />
+
+						<hbox
+							style="position: absolute;top: 4px;right: 9px;">
+							<label value="Page size:" />
+							<combobox id="pageSizeOffice"
+								readonly="true">
+								<comboitem label="5" value="5" />
+								<comboitem label="10" value="10" />
+								<comboitem label="15" value="15" />
+								<comboitem label="20" value="20" />
+								<comboitem label="25" value="25" />
+							</combobox>
+						</hbox>
+
+					</div>
+
 				</div>
 			</div>
 			<popup id="mypopup">
 				<include id="officePageInclude" src="" />
 			</popup>
-			<button label="Save" sclass="savebtn" id="finalSubmit"
+			<button label="Save" tooltiptext="Save"  sclass="savebtn" id="finalSubmit"
 				visible="false" />
 		</div>
 
 		<popup id="deleteOfficePooup"
-			style="margin: 20px;
-    padding: 20px;">
+			style="margin: 20px; padding: 20px;">
+
 			<div style="padding-bottom: 30px;">
 				<label
 					value="Are you sure you want to delete this office?"
@@ -163,7 +200,7 @@
 				<button id="deleteoffice" label="Yes" />
 				<button id="canceldeleteOffice" label="No" />
 			</hbox>
+
 		</popup>
 	</window>
 </zk>
-
