--- a/ZKProject/src/main/webapp/menu.css
+++ b/ZKProject/src/main/webapp/menu.css
@@ -22,12 +22,14 @@ span.z-menuitem-text {
 .z-menu-text, .z-menuitem-text {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 17px;
-	font-weight: normal;
 	display: inline-block;
 	line-height: 16px;
 	text-shadow: 0 1px #fff;
 	padding-bottom: 7px;
 	padding-left: 54px;
+	padding-top: 6px;
+	font-weight: 700;
+	color: black;
 }
 
 .z-menubar {
